# COOKOUT_v2

./: .gitignore  app.db  models.py  pyproject.toml  routes.py  tests.py
COOKOUT/backend/: app.db  main.py
COOKOUT/backend/app/: __init__.py  auth.py  routes.py
COOKOUT/backend/app/api/: collections.py  recipes.py  tags.py
COOKOUT/backend/app/api/services/: collection_service.py  recipe_service.py  user_service.py
COOKOUT/backend/app/static/: index.js
COOKOUT/backend/app/templates/: base.html  edit_profile.html  home.html  login.html  sign_up.html  user.html
COOKOUT/backend/migrations/versions/: 0006e9d5cf47_new_fields_recipes_and_new_tag_model.py  2f15e7c515f4_user_and_recipe_table.py
COOKOUT/frontend/my-react-app/: package-lock.json
COOKOUT/frontend/my-react-app/src/: App.js  UserList.js
api/: recipes.py  users.py
app/: __init__.py  auth.py  collections_endpoints.py  recipes_endpoints.py  tags_endpoints.py  users_endpoints.py
app/services/: collection_service.py  recipe_service.py  tag_service.py  user_service.py
instance/: database.db
migrations/versions/: a939740d0e19_change_of_password_column_to_password_.py  b900620061a7_collection.py
