[tool.poetry]
name = "cookout-v2"
version = "0.1.0"
description = ""
authors = ["Linda Njau <lindanjau21@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "2.3.3"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
flask-migrate = "^4.0.7"
flask-cors = "^4.0.0"
flask-jwt-extended = "^4.6.0"
flask-api = "^3.1"
werkzeug = "2.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
